[package]
name = "jr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive", "cargo"]}
reqwest = { version = "0.11.10", features = ["blocking"]}
jsonpath-rust = "0.1.5"
