[package]
name = "cj"
version = "0.0.2"
edition = "2021"

authors = ["Övünç Yayla <ovuncyayla@gmail.com>"]
description = "Blazing fast command-line json processor"
readme = "CRATE.md"
homepage = "https://github.com/ovuncyayla/cj"
repository = "https://github.com/ovuncyayla/cj"
keywords = ["json", "cli", "json-path", "utility"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive", "cargo"]}
jsonpath-rust = "0.1.5"
tui = "0.18.0"
crossterm = "0.23"
unicode-width = "0.1.9"
#colored_json = "2.1.0"
